# AI-in-Industry-Project

./: LICENSE  README.md  pyproject.toml  train_bert.py  train_script.py
console_output/: CNN-BiGRU.out  MCBiGRU.out  bert.out  clstm.out  cnn.out  mlp.out
models/: __init__.py  base_model.py  bert.py  clstm.py  cnn.py  cnn_bigru.py  mc_bigru.py  mlp.py
preprocessing/: __init__.py  utils.py
